Update sbt version